# curl-based-email

./: CMakeLists.txt  README.md  base64.cpp  main.cpp  smtp_mail_sender.cpp
include/: base64.h  smtp_mail_sender.h
